@@ -1,3 +1,7 @@
+2006-12-30  Mark Tracy <tracy454@concentric.net>
+	* Source/art/ReadRect.m (-GSReadRect:): incorporate offset into
+	coordinate transformation calculations. Fixes bug #18260
+
 2006-12-28  Matt Rice  <ratmice@gmail.com>
 
 	* Source/x11/XGServerWindow.m (-flushwindowrect::): Don't convert 
